--- a/diplomarbeit.tex
+++ b/diplomarbeit.tex
@@ -225,7 +225,7 @@ A-1030 Wien :: Tel +43 1 24215-10 :: Fax DW 18
 \textbf{\large{}Hovering Steward}\\
  \vspace{15mm}
  ausgeführt an der\\
- Höheren Abteilung für Informationstechnologie/Ausbildungsschwerpunkt\\
+ Höheren Abteilung für Mechatronik \& Informationstechnologie/Medientechnik\\
  der Höheren Technischen Lehranstalt Wien 3 Rennweg\\
  \vspace{1cm}
  im Schuljahr 2015/2016\\
