--- a/diplomarbeit.tex
+++ b/diplomarbeit.tex
@@ -224,8 +224,8 @@ A-1030 Wien :: Tel +43 1 24215-10 :: Fax DW 18
  }\textbf{\large{}}\\
 \textbf{\large{}Hovering Steward}\\
  \vspace{15mm}
- ausgeführt an der\\
- Höheren Abteilung für Mechatronik \& Informationstechnologie/Medientechnik\\
+ ausgeführt an den\\
+ Höheren Abteilungen für Mechatronik/Automatisierung \& Informationstechnologie/Medientechnik\\
  der Höheren Technischen Lehranstalt Wien 3 Rennweg\\
  \vspace{1cm}
  im Schuljahr 2015/2016\\
