--- a/Kommunikation_Applikation_und_Hexacopter.tex
+++ b/Kommunikation_Applikation_und_Hexacopter.tex
@@ -6,6 +6,7 @@ abdecken. Über diese werden anschließend die diversen Daten übertragen, dazu 
 
 %%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%
 \section{Allgemeine technische Planung}
+Autor: Lucas Ullrich\\ \\
 In der Planung wurde eine unkomplizierte und verlässliche Lösung für beide Kommunikationspartner gesucht. Da Bluetooth kaum noch standardmäßig verbaut ist, wird hier wiederum
 serverseitig eine externe Hardware benötigt, um dies zu vermeiden wurde WLAN ins Auge gefasst.
 
@@ -14,6 +15,7 @@ es gibt die Möglichkeit für ein Handover (Verbindungsübergabe) in sehr große
 Möglichkeiten, festzustellen ob die Verbindung noch aufrecht ist.
 
       \subsection{Kommunikationsschema}
+Autor: Lucas Ullrich\\ \\
 Für die Kommunikation zwischen dem Hexacopter und dem Server wurde folgendes Schema festgelegt:
 \begin{table}[H]
 \centering
